# 25-2_aprendizado-por-reforco

./: .gitignore  .md  CARLA 0.9.16 + ROS 2 Foxy.md  CARLA_BUILD_SUCCESS_README.md  CARLA_ROS2_Installation_Guide.md  CLEANUP_ANALYSIS.md  DEEP_THINKING_ANALYSIS.md  DRL_README.md  FIRST_RUN_GUIDE.md  INSTALLATION_GUIDE.md  NOTE.md  PROJECT_SUCCESS_SUMMARY.md  PROJECT_TODO.md  README.md  REAL.todo  SYSTEM_DELIVERY_COMPLETE.md  carla_integration_showcase.py  demonstrate_integration.py  docker-compose.yml  final_system_status.py  health_check_report_20250818_165445.json  health_check_report_20250818_172227.json  health_check_report_20250820_082432.json  health_check_report_20250820_095505.json  health_check_report_20250820_101704.json  launch_carla_optimized.sh  related_works.lnk  setup_carla_ros_bridge.sh  setup_development.py  start_real_carla_system.bat  system_status.py  test_carla_connection.py  test_carla_optimized.py  test_carla_ros_bridge.py  test_opencv_window.py  test_zmq_connection.py  todo.todo  ultimate_carla_integration_demo.py  visual_status.py
Detalhamento/: .gitignore  CNN_FIX_REPORT.md  DEBUG_SESSION_SUMMARY_2025-11-04.md  QUICKSTART.md  WAYPOINT_DESIGN_ISSUE.md
Detalhamento/av_td3_system/: .dockerignore  CRITICAL_BUG_ANALYSIS_REWARD_SIGN.md  Dockerfile  Dockerfile.ubuntu22.04  EVALUATION_ANALYSIS.md  EVALUATION_FIXES.md  HEADING_FIX_VALIDATION.md  IMPLEMENTATION_SUMMARY.md  LIVE_TRAINING_ANALYSIS.md  NEW_DEVELOPMENT_PLAN.md  NEXT_STEPS.md  (+18 more)
L1/: ps1-copy-dev.ipynb  ps1.ipynb  ps1_copy_for_development.ipynb  todo.todo
L2/: .md  ps2-dev.ipynb  ps2.ipynb
L3/: ps3-dev.ipynb  ps3.ipynb
L4/: .gitignore  ps4.ipynb
apresentacao/: references.bib
archive_old_development/carla_drl_pipeline/ros2_gateway/: package.xml
carla_client_py36/: carla_zmq_client.py  main.py  main_enhanced.py  simple_client.py
carla_drl_pipeline/: DEPLOYMENT_CHECKLIST.md  README.md
carla_drl_pipeline/ros2_gateway/: CMakeLists.txt
carla_drl_pipeline/ros2_gateway/include/carla_bridge/: carla_bridge_node.hpp
carla_drl_project/: IMPLEMENTATION_SUMMARY.md  ITERATION_COMPLETION_SUMMARY.md  NEXT_STEPS_ANALYSIS.md  PROJECT_COMPLETION_REPORT.md  PROJECT_STATUS.md  README.md  ROS2_BRIDGE_IMPLEMENTATION_PLAN.md  SETUP_COMPLETE.md  demo_carla_drl.py  install_dependencies.sh  requirements_validation_report_20250920_173842.json  requirements_validation_report_20250920_180340.json  setup.py  validate_requirements.py
communication/: zmq_bridge.py
configs/: advanced_config_models.py  advanced_pipeline_config.yaml  complete_system_config.yaml  config_models.py  evaluation_scenarios.md  sim.yaml  train.yaml
deployment/: advanced_deployment_commands.md  deployment_manager.py  health_monitor.py
docs/: REAL_CARLA_INTEGRATION.md  enhanced_repository_structure.md
drl_agent/: continuous_speed_boost.py  debug_trainer.py  infer.py  real_carla_env.py  real_carla_ppo_trainer.py  speed_boost.py  speed_config.py  speed_optimized_trainer.py  verify_fixes.py  visual_monitor.py
extracted_text/: 2021 End-to-End Autonomous Driving Through Dueling Double Deep Q-Network.txt  2022 Deep reinforcement learning based control for Autonomous Vehicles in CARLA + ROS.txt  2023 A Deep Reinforcement Learning Approach for Efficient, Safe and Comfortable Driving.txt  2023 Autonomous Driving with Deep Reinforcement Learning in CARLA Simulation.txt  2023 Deep Reinforcement Learning for Autonomous Vehicle Intersection Navigation - CARLA.txt  2023 Safe Navigation Training Autonomous Vehicles using Deep Reinforcement Learning in CARLA.txt  2024 Implementing Deep Reinforcement Learning in Autonomous Control Systems.txt  2024 Towards Robust Decision-Making for Autonomous Highway Driving Based on Safe Reinforcement Learning.txt  2025 - HIGH - Autonomous Navigation with Deep Reinforcement Learning in CARLA Simulator.txt  2025 - Navigating_the_Future_Deep_Reinforcement_Learning_for_Smart_Autonomous_Vehicles.txt  2025 A Comparative Study of Deep Reinforcement Learning Algorithms for Urban Autonomous Driving Addressing the Geographic and Regulatory Challenges in CARLA.txt  Deep_Reinforcement_Learning_based_control_algorithms_Training_and_validation_using_the_ROS_Framework_in_CARLA_Simulator_for_Self-Driving_applications.txt  HIGH - Autonomous NavigationwithDeepReinforcement Learning inCarlaSimulator.txt
monitoring/: production_monitoring.py
rl_environment/: CARLA_DRL_IMPLEMENTATION_GUIDE.md  README.md  __init__.py  carla_camera_visualizer_ros.py  carla_env.py  carla_sensor_publisher.py  debug_bridge_paths.py  debug_sensor_publisher.py  dummy_sac_test.py  environment.py  feature_extractors.py  fix_sac.py  fix_validation.py  launch_carla_drl.py  launch_carla_drl_integration.py  launch_carla_test.py  quick_sac_test.py  reward_function.py  run_carla_drl.py  run_sac_test.py  run_with_carla.py  sac_component_test.py  sac_update_test.py  simple_sac.py  simple_sac_test.py  test_carla_connection.py
ros2_gateway/: CMakeLists.txt  package.xml
ros2_gateway/src/: gateway_node.cpp
scripts/: deployment_commands.md  health_check.py  run_first_visualization.py  setup_env.ps1  start_first_run.bat
tools/: diagnostics.py
(+934 files in other folders)
