<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>carla_ros2_bridge</name>
  <version>1.0.0</version>
  <description>High-performance ROS 2 bridge for CARLA DRL pipeline</description>
  
  <maintainer email="your-email@example.com">Your Name</maintainer>
  <license>MIT</license>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <!-- Core ROS 2 dependencies -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  
  <!-- Message serialization -->
  <depend>rmw_implementation</depend>
  <depend>rmw_fastrtps_cpp</depend>
  
  <!-- External dependencies -->
  <depend>opencv4</depend>
  <build_depend>pkg-config</build_depend>
  <build_depend>libzmq3-dev</build_depend>
  <exec_depend>libzmq5</exec_depend>
  
  <!-- Testing dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
